实现获取nitter可用资源网站

--- a/用法.md
+++ b/用法.md
@@ -3,11 +3,12 @@
 ## 目录
 
 1. [快速开始](#快速开始)
-2. [用户管理](#用户管理)
-3. [推文采集](#推文采集)
-4. [数据查询](#数据查询)
-5. [系统测试](#系统测试)
-6. [常见问题](#常见问题)
+2. [Nitter 实例管理](#nitter-实例管理)
+3. [用户管理](#用户管理)
+4. [推文采集](#推文采集)
+5. [数据查询](#数据查询)
+6. [系统测试](#系统测试)
+7. [常见问题](#常见问题)
 
 ---
 
@@ -42,6 +43,149 @@ pip install -r requirements.txt
 # 运行系统测试，验证数据库和爬虫功能
 python test_system.py
 ```
+
+---
+
+## Nitter 实例管理
+
+Nitter 是 Twitter 的隐私友好前端，通过使用多个可用实例可以提高系统稳定性。
+
+### 自动发现可用实例
+
+使用 `discover_instances.py` 脚本自动检测可用的 Nitter 实例：
+
+```bash
+# 基本使用：发现并列出可用实例
+python discover_instances.py
+
+# 发现前 8 个最快的实例
+python discover_instances.py --count 8
+
+# 设置超时时间（秒）
+python discover_instances.py --timeout 10
+
+# 只显示响应时间小于 3 秒的实例
+python discover_instances.py --max-response-time 3.0
+
+# 自动更新 .env 文件（推荐）
+python discover_instances.py --count 8 --max-response-time 4.0 --update-env
+```
+
+**输出示例**：
+```
+================================================================================
+Nitter 实例健康检测
+================================================================================
+
+✓ 发现 7 个可用实例:
+
+  1. https://nitter.catsarch.com (1.72s)
+  2. https://nitter.pufe.org (1.88s)
+  3. https://nitter.net (2.05s)
+  4. https://xcancel.com (2.27s)
+  5. https://bird.habedieeh.re (2.34s)
+  6. https://nitter.privacyredirect.com (2.59s)
+  7. https://nitter.adminforge.de (4.14s)
+
+✓ .env 文件已更新
+================================================================================
+```
+
+### 工作原理
+
+实例发现系统采用**模块化架构**，分为两个独立部分：
+
+#### 1. 实例来源获取 (`instance_sources.py`)
+
+支持多种来源获取实例列表：
+
+- **BuiltinSource**: 内置 40+ 个已验证实例
+- **StatusPageSource**: 从 https://status.d420.de/ 状态监控网站获取
+- **可扩展**: 支持添加自定义来源（GitHub、API、RSS 等）
+
+所有来源的实例会自动去重和合并。
+
+#### 2. 健康检测 (`instance_discovery.py`)
+
+- **并发检测**: 同时检测所有实例的可用性和响应时间
+- **智能过滤**: 验证 HTTP 状态码、响应时间、页面内容
+- **自动排序**: 按响应时间从快到慢排序
+- **自动更新**: 可选自动更新 `.env` 文件
+
+#### 工作流程
+
+```
+[内置列表] ─┐
+            ├─> [来源管理器] ─> [去重合并] ─> [并发健康检测] ─> [排序] ─> [可用实例列表]
+[状态页面] ─┘
+```
+
+### 手动配置实例
+
+如果需要手动指定 Nitter 实例，编辑 `.env` 文件：
+
+```bash
+# 编辑 .env 文件
+nano .env
+
+# 修改 NITTER_INSTANCES（多个实例用逗号分隔）
+NITTER_INSTANCES=https://xcancel.com,https://nitter.net,https://nitter.privacydev.net
+```
+
+### 定期更新实例列表
+
+建议定期运行实例发现脚本，保持实例列表最新：
+
+```bash
+# 方式 1: 手动执行
+python discover_instances.py --count 10 --update-env
+
+# 方式 2: 添加到 crontab（每天凌晨 2 点更新）
+0 2 * * * cd /path/to/nitter_x && /path/to/python discover_instances.py --count 10 --update-env >> logs/instances.log 2>&1
+```
+
+### 查看当前配置的实例
+
+```bash
+# 查看 .env 中配置的实例
+grep NITTER_INSTANCES .env
+
+# 或使用 Python
+python -c "from src.config.settings import settings; print('\n'.join(settings.NITTER_INSTANCES))"
+```
+
+### 实例健康状态判断标准
+
+脚本通过以下标准判断实例是否可用：
+- ✓ HTTP 状态码为 200
+- ✓ 响应时间在设定范围内
+- ✓ 页面内容包含 Nitter 相关特征
+- ✓ URL 包含 nitter/bird/twitter 等关键词
+
+### 扩展自定义实例来源
+
+系统支持添加新的实例来源。查看 `src/crawler/README_SOURCES.md` 了解详情。
+
+示例：添加 GitHub 来源
+
+```python
+from src.crawler.instance_sources import InstanceSource, InstanceSourceManager
+
+class GitHubSource(InstanceSource):
+    def get_source_name(self) -> str:
+        return "GitHub"
+
+    def fetch_instances(self) -> List[str]:
+        # 从 GitHub 获取实例列表
+        # ... 实现逻辑
+        return instances
+
+# 使用自定义来源
+manager = InstanceSourceManager()
+manager.add_source(GitHubSource())
+```
+
+详细教程请参考 `src/crawler/README_SOURCES.md`。
 
 ---
 
