--- a/分级策略.md
+++ b/分级策略.md
@@ -185,3 +185,62 @@
 
 👉 这套非常适合你未来做 **AI 投资决策系统**
 
+
+
+
+
+## 这是当前使用的分级策略
+
+* P0 中应该新增闪崩，中美韩政策影响，出现安全风险，黑客攻击，无法提款，coinbase/币安现货上架；稳定币脱锚改为协议脱锚；
+
+* P0 中 ETF批准/否决调整到P2，交易所上线/下架 应该调整到P1。
+
+```
+**分级标准** (P0-P6，价格影响导向):
+- **P0**: 直接、可验证、已发生的价格驱动事件（最高优先级）
+  - 已经发生或即将确定发生，必然触发资金行为
+  - 例如：Coinbase/Binance现货上架或下架、中/美/韩监管措施、闪崩/插针、系统性流动性枯竭、已确认黑客攻击、安全漏洞披露、稳定币脱锚/协议被盗
+  - 价格影响：强烈、短期立刻反应（分钟级~小时级波动）
+
+- **P1**: 高概率触发价格的"强信号事件"
+  - 尚未完全落地，但市场共识认为"极可能发生"
+  - 例如：美联储宣布加息/降息、美股大涨/大跌、代币销毁、ETF审批情况、代币解锁/回购计划、代币经济模型调整
+  - 价格影响：提前交易（buy the rumor），波动可持续数天
+
+- **P2**: 结构性、长期价格影响因素（慢变量）
+  - 不会立刻拉盘/砸盘，但会改变价格中枢
+  - 例如：顶级交易所上币强预期、官宣主网上线时间、BTC减半、大额融资披露、巨鲸转账、L2成本下降
+  - 价格影响：慢热、趋势型，适合中长期配置判断
+
+- **P3**: 宏观 & 政策级，对crypto整体估值有影响
+  - 不直接针对crypto，但影响风险资产定价
+  - 例如：美联储预期加息/降息、CPI/非农/PCE、美元流动性变化、全球性金融事件
+  - 价格影响：全市场联动，对BTC/ETH权重更高
+
+- **P4**: 行业、叙事、情绪层面的信息
+  - 会影响市场"讲什么故事"，但资金反应不稳定
+  - 例如：AI+Crypto叙事、RWA/DePIN/Restaking热度、大佬喊单、VC报告
+  - 价格影响：高度依赖情绪，容易过期
+
+- **P5**: 信息噪音（相关但基本不影响价格）
+  - 和crypto有关，但几乎不改变任何资金决策
+  - 例如：项目PR合作、普通AMA/采访、社区治理投票、已消化的旧消息
+  - 价格影响：极低
+
+- **P6**: 可直接舍弃（无价格影响）
+  - 例如：无链上/资金/政策影响的内容、单纯观点输出
+```
+
+
+
+
+
+* 新叙事
+* MEME
+
+
+
+
+
+
+
