--- a/分级策略.md
+++ b/分级策略.md
@@ -209,7 +209,7 @@
 
 - **P2**: 结构性、长期价格影响因素（慢变量）
   - 不会立刻拉盘/砸盘，但会改变价格中枢
-  - 例如：顶级交易所上币强预期、官宣主网上线时间、BTC减半、大额融资披露、巨鲸转账、L2成本下降
+  - 例如：顶级交易所上币强预期、官宣主网上线时间、BTC减半、大额融资披露、巨鲸转账、L2成本下降、SEC监管/处罚
   - 价格影响：慢热、趋势型，适合中长期配置判断
 
 - **P3**: 宏观 & 政策级，对crypto整体估值有影响
