--- a/分级策略.md
+++ b/分级策略.md
@@ -1,8 +1,10 @@
-我们直接按**“对加密货币价格的影响链路”**来重构一套**可落地、可打分、可用于信息筛选/排序的分级体系**。
+# 加密货币推文分级策略
+
+本文档描述了项目使用的 P0-P6 价格影响导向分级系统。
 
 ---
 
-## 一、先给你一个总原则（非常重要）
+## 一、总原则（非常重要）
 
 > **价格 = 预期变化 × 资金行为 × 流动性**
 
@@ -16,161 +18,164 @@
 
 ---
 
-## 二、推荐的「价格影响导向」分级体系（P0–P6）
+## 二、当前使用的分级体系（P0-P6）
 
-我建议你**彻底抛弃 A/B/C/D/E/F 的“相关性”命名**，改成**价格影响等级（Price Impact Level）**，这样在系统里也更自然。
+### 重要前提
+
+**所有分级必须是与加密货币直接或间接相关的信息，与加密货币无关的内容直接归为 P6。**
 
 ---
 
-## 🟥 P0 — 直接、可验证、已发生的价格驱动事件（最高优先级）
+### 🔴 P0 — 直接、可验证、已发生的加密货币价格驱动事件（最高优先级）
 
 **定义**：
-已经发生，或即将确定发生，**必然触发资金行为**。
+已经发生或即将确定发生，**必然触发加密货币资金行为**。
 
 **典型特征**
-
 * 时间明确
 * 行为明确
 * 资金路径清晰
-* 无需“解读”
+* 无需"解读"
 
 **例子**
-
-* ETF 批准 / 否决（BTC、ETH）
-* 项目被 **Binance / Coinbase** 上线或下架
-* 协议被盗、私钥泄露、链上攻击已确认
+* Coinbase/Binance 现货上架或下架
+* 中/美/韩加密货币监管措施
+* 加密货币闪崩/插针、系统性流动性枯竭
+* 已确认黑客攻击、智能合约安全漏洞披露
+* 稳定币脱锚/DeFi协议被盗
 * 巨鲸地址已完成大额转账（交易所 ↔ 冷钱包）
-* 稳定币脱锚已发生（USDT、USDC）
 
 **价格影响**
-
 * ⚡ 强烈、短期立刻反应
 * 常见为分钟级~小时级波动
 
-👉 **你系统中：必须置顶、强推送、不可丢弃**
+👉 **系统处理：必须置顶、强推送、不可丢弃**
 
 ---
 
-## 🟥 P1 — 高概率触发价格的“强信号事件”
+### 🟠 P1 — 高概率触发加密货币价格的"强信号事件"
 
 **定义**：
-尚未完全落地，但**市场共识认为“极可能发生”**。
+尚未完全落地，但**市场共识认为"极可能发生"**，会影响加密货币价格。
 
 **例子**
-
-* ETF 审批进入最终阶段（SEC 公开文件）
+* 美联储宣布加息/降息
+* 美股大涨/大跌
+* 加密货币代币销毁
+* 现货 ETF 审批情况（最终阶段）
+* 代币解锁/回购计划
+* 代币经济模型调整
 * 重要项目官宣主网上线时间
-* 明确的代币解锁 / 回购 / 销毁计划
 * 已披露但未执行的大额融资、OTC
 
 **价格影响**
-
 * 📈 提前交易（buy the rumor）
 * 波动可持续数天
 
-👉 **适合做“提前预警 + 权重加分”**
+👉 **系统处理：适合做"提前预警 + 权重加分"**
 
 ---
 
-## 🟧 P2 — 结构性、长期价格影响因素（慢变量）
+### 🟡 P2 — 影响加密货币的结构性、长期价格因素（慢变量）
 
 **定义**：
-不会立刻拉盘/砸盘，但**会改变价格中枢**。
+不会立刻拉盘/砸盘，但**会改变加密货币价格中枢**。
 
 **例子**
-
-* 代币经济模型调整（通胀 → 通缩）
-* L2 成本下降、吞吐量大幅提升
+* 顶级交易所上币强预期
+* 官宣主网上线时间
 * BTC 减半（提前已被定价，但仍有结构影响）
-* ETH 升级（EIP-4844 这类）
+* 加密项目大额融资披露
+* 巨鲸转账
+* L2 成本下降、吞吐量大幅提升
+* SEC 对加密项目的监管/处罚
 
 **价格影响**
-
 * 🐢 慢热、趋势型
 * 适合中长期配置判断
 
-👉 **更适合“策略层”而非“快讯层”**
+👉 **系统处理：更适合"策略层"而非"快讯层"**
 
 ---
 
-## 🟨 P3 — 宏观 & 政策级，对 crypto 整体估值有影响
+### 🟢 P3 — 宏观 & 政策级，对加密货币整体估值有影响
 
 **定义**：
-不直接针对 crypto，但**影响风险资产定价**。
+不直接针对加密货币，但**影响包括加密货币在内的风险资产定价**。
 
 **例子**
-
-* 美联储加息 / 降息
-* CPI / 非农 / PCE
+* 美联储预期加息/降息
+* CPI / 非农 / PCE 数据
 * 美元流动性变化
-* 全球金融危机、银行风险
+* 全球性金融事件、银行风险
 
 **价格影响**
-
 * 🌍 全市场联动
 * 对 BTC / ETH 权重更高
 
-👉 **应与宏观时间轴绑定（事件日历）**
+👉 **系统处理：应与宏观时间轴绑定（事件日历）**
 
 ---
 
-## 🟨 P4 — 行业、叙事、情绪层面的信息
+### 🔵 P4 — 加密货币行业、叙事、情绪层面的信息
 
 **定义**：
-会影响市场“讲什么故事”，但**资金反应不稳定**。
+会影响加密货币市场"讲什么故事"，但**资金反应不稳定**。
 
 **例子**
-
 * AI + Crypto 叙事
 * RWA、DePIN、Restaking 热度上升
-* 某大佬喊单 / 观点
-* VC 报告、趋势解读
+* 加密 KOL 喊单/观点
+* 加密 VC 报告、趋势解读
 
 **价格影响**
-
 * 🎭 高度依赖情绪
 * 容易过期
 
-👉 **适合做“热度 & 叙事标签”，不要直接推交易**
+👉 **系统处理：适合做"热度 & 叙事标签"，不要直接推交易**
 
 ---
 
-## 🟦 P5 — 信息噪音（相关但基本不影响价格）
+### ⚪ P5 — 加密货币信息噪音（相关但基本不影响价格）
 
 **定义**：
-和 crypto 有关，但**几乎不改变任何资金决策**。
+和加密货币有关，但**几乎不改变任何资金决策**。
 
 **例子**
-
-* 项目 PR 合作新闻（无资金、无产品）
+* 加密项目 PR 合作新闻（无资金、无产品）
 * 普通 AMA、采访
-* 社区治理投票（无经济影响）
+* DAO 治理投票（无经济影响）
 * 已被市场消化的旧消息
 
-👉 **可以保留，用于“项目跟踪”，但权重极低**
+👉 **系统处理：可以保留，用于"项目跟踪"，但权重极低**
 
 ---
 
-## ⬜ P6 — 可直接舍弃（与你原 F 类类似）
+### ⚫ P6 — 可直接舍弃（与加密货币无关或无价格影响）
+
+**定义**：
+与加密货币无关或无任何价格影响的内容。
 
 **例子**
-
-* 娱乐化 meme
-* 无链上 / 无资金 / 无政策影响的内容
+* 与加密货币无关的内容
+* 娱乐化 meme（无加密货币关联）
+* 无链上/无资金/无政策影响的内容
 * 单纯观点输出、情绪宣泄
+
+👉 **系统处理：直接丢弃或归档**
 
 ---
 
-## 三、给你一个「可程序化」的判定逻辑（非常适合你用在系统里）
+## 三、可程序化的判定逻辑
 
-你可以给每条信息打 **4 个维度分数**：
+可以给每条信息打 **4 个维度分数**：
 
-| 维度        | 问题        | 分值    |
-| --------- | --------- | ----- |
-| Event     | 是否是具体事件   | 0 / 1 |
-| Capital   | 是否涉及真实资金流 | 0–2   |
-| Scope     | 影响范围      | 1–3   |
-| Certainty | 确定性       | 1–3   |
+| 维度 | 问题 | 分值 |
+|------|------|------|
+| Event | 是否是具体事件 | 0 / 1 |
+| Capital | 是否涉及真实资金流 | 0–2 |
+| Scope | 影响范围 | 1–3 |
+| Certainty | 确定性 | 1–3 |
 
 **总分 = Event + Capital + Scope + Certainty**
 
@@ -183,53 +188,39 @@
 * 2–3 → **P4**
 * ≤1 → **P5/P6**
 
-👉 这套非常适合你未来做 **AI 投资决策系统**
+👉 这套非常适合未来做 **AI 投资决策系统**
 
+---
 
+## 四、系统实现
 
+当前系统使用 LangChain + LLM 对所有推文进行自动分级。
 
+### 分级提示词
 
-## 这是当前使用的分级策略
+分级提示词统一在 `src/processor/prompts.py` 中管理，包含：
+- 分级标准定义（GRADE_DEFINITIONS）
+- 系统消息（SYSTEM_GRADE）
+- 分级提示词模板（GRADE_TEMPLATE）
 
-* P0 中应该新增闪崩，中美韩政策影响，出现安全风险，黑客攻击，无法提款，coinbase/币安现货上架；稳定币脱锚改为协议脱锚；
+### 处理流程
 
-* P0 中 ETF批准/否决调整到P2，交易所上线/下架 应该调整到P1。
+1. 对所有推文进行 P0-P6 分级
+2. 对所有级别推文进行全量处理：
+   - 语言检测
+   - 非中文推文自动翻译为中文
+   - 生成 100 字以内中文摘要
+   - 提取 3-5 个关键词
+   - 生成摘要的向量表示（384维）
+3. 保存所有结果到 `processed_tweets` 表
 
-```
-**分级标准** (P0-P6，价格影响导向):
-- **P0**: 直接、可验证、已发生的价格驱动事件（最高优先级）
-  - 已经发生或即将确定发生，必然触发资金行为
-  - 例如：Coinbase/Binance现货上架或下架、中/美/韩监管措施、闪崩/插针、系统性流动性枯竭、已确认黑客攻击、安全漏洞披露、稳定币脱锚/协议被盗
-  - 价格影响：强烈、短期立刻反应（分钟级~小时级波动）
+---
 
-- **P1**: 高概率触发价格的"强信号事件"
-  - 尚未完全落地，但市场共识认为"极可能发生"
-  - 例如：美联储宣布加息/降息、美股大涨/大跌、代币销毁、ETF审批情况、代币解锁/回购计划、代币经济模型调整
-  - 价格影响：提前交易（buy the rumor），波动可持续数天
+## 五、参考资料
 
-- **P2**: 结构性、长期价格影响因素（慢变量）
-  - 不会立刻拉盘/砸盘，但会改变价格中枢
-  - 例如：顶级交易所上币强预期、官宣主网上线时间、BTC减半、大额融资披露、巨鲸转账、L2成本下降、SEC监管/处罚
-  - 价格影响：慢热、趋势型，适合中长期配置判断
-
-- **P3**: 宏观 & 政策级，对crypto整体估值有影响
-  - 不直接针对crypto，但影响风险资产定价
-  - 例如：美联储预期加息/降息、CPI/非农/PCE、美元流动性变化、全球性金融事件
-  - 价格影响：全市场联动，对BTC/ETH权重更高
-
-- **P4**: 行业、叙事、情绪层面的信息
-  - 会影响市场"讲什么故事"，但资金反应不稳定
-  - 例如：AI+Crypto叙事、RWA/DePIN/Restaking热度、大佬喊单、VC报告
-  - 价格影响：高度依赖情绪，容易过期
-
-- **P5**: 信息噪音（相关但基本不影响价格）
-  - 和crypto有关，但几乎不改变任何资金决策
-  - 例如：项目PR合作、普通AMA/采访、社区治理投票、已消化的旧消息
-  - 价格影响：极低
-
-- **P6**: 可直接舍弃（无价格影响）
-  - 例如：无链上/资金/政策影响的内容、单纯观点输出
-```
+- LLM 提示词管理：`src/processor/prompts.py`
+- 推文处理器：`src/processor/tweet_processor.py`
+- 数据库表结构：`docker/postgres/init/01-init.sql`
 
 
 
