--- a/分级策略.md
+++ b/分级策略.md
@@ -224,6 +224,45 @@
 
 
 
+````
+分级标准 (P0-P6，价格影响导向):
+
+【重要前提】：所有分级必须是与加密货币直接或间接相关的信息，与加密货币无关的内容直接归为 P6。
+
+- P0: 直接、可验证、已发生的加密货币价格驱动事件（最高优先级）
+  - 已经发生或即将确定发生，必然触发加密货币资金行为
+  - 例如：Coinbase/Binance现货上架或下架、中/美/韩加密货币监管措施、加密货币闪崩/插针、系统性流动性枯竭、已确认黑客攻击、智能合约安全漏洞披露、稳定币脱锚/DeFi协议被盗
+  - 价格影响：强烈、短期立刻反应（分钟级~小时级波动）
+
+- P1: 高概率触发加密货币价格的"强信号事件"
+  - 尚未完全落地，但市场共识认为"极可能发生"，会影响加密货币价格
+  - 例如：美联储宣布加息/降息、美股大涨/大跌、加密货币代币销毁、现货ETF审批情况、代币解锁/回购计划、代币经济模型调整
+  - 价格影响：提前交易（buy the rumor），波动可持续数天
+
+- P2: 影响加密货币的结构性、长期价格因素（慢变量）
+  - 不会立刻拉盘/砸盘，但会改变加密货币价格中枢
+  - 例如：顶级交易所上币强预期、官宣主网上线时间、BTC减半、加密项目大额融资披露、巨鲸转账、L2成本下降、SEC对加密项目的监管/处罚
+  - 价格影响：慢热、趋势型，适合中长期配置判断
+
+- P3: 宏观 & 政策级，对加密货币整体估值有影响
+  - 不直接针对加密货币，但影响包括加密货币在内的风险资产定价
+  - 例如：美联储预期加息/降息、CPI/非农/PCE数据、美元流动性变化、全球性金融事件
+  - 价格影响：全市场联动，对BTC/ETH权重更高
+
+- P4: 加密货币行业、叙事、情绪层面的信息
+  - 会影响加密货币市场"讲什么故事"，但资金反应不稳定
+  - 例如：AI+Crypto叙事、RWA/DePIN/Restaking热度、加密KOL喊单、加密VC报告
+  - 价格影响：高度依赖情绪，容易过期
+
+- P5: 加密货币信息噪音（相关但基本不影响价格）
+  - 和加密货币有关，但几乎不改变任何资金决策
+  - 例如：加密项目PR合作、普通AMA/采访、DAO治理投票、已消化的旧消息
+  - 价格影响：极低
+
+- P6: 可直接舍弃（与加密货币无关或无价格影响）
+  - 例如：与加密货币无关的内容、无链上/资金/政策影响的内容、单纯观点输出、带有广告宣传倾向
+````
+
 
 
 
